# master_ga_docs

./: pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
source/: conf.py
